Fixed dark mode border

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -165,9 +165,14 @@ div.page.is-dark
         color: $light
 
     .hero.is-dark
+        .tabs
+            border-bottom: 1px solid $grey
+        .tabs a:hover
+            border-bottom: 2px solid $cyan
         .tabs .is-active a            
             color: $info
-            border-bottom-style: solid
+            border-bottom: 2px solid $cyan
+            
     hr        
         opacity: 0.2
 
